--- a/WordsFactory/WordsFactory/LaunchScreen.storyboard
+++ b/WordsFactory/WordsFactory/LaunchScreen.storyboard
@@ -7,6 +7,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Rubik.ttf">
+            <string>Rubik-Light_ExtraBold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -15,8 +20,31 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashScreen" translatesAutoresizingMaskIntoConstraints="NO" id="YYk-HF-V0T">
+                                <rect key="frame" x="9" y="294" width="375" height="264"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="264" id="fOW-OF-73P"/>
+                                    <constraint firstAttribute="width" constant="375" id="pzk-VO-i87"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WordsFactory" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsZ-zX-VRH">
+                                <rect key="frame" x="0.0" y="588" width="393" height="39.333333333333371"/>
+                                <fontDescription key="fontDescription" name="Rubik-Light_ExtraBold" family="Rubik" pointSize="33"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hsZ-zX-VRH" secondAttribute="trailing" id="6sl-na-vG1"/>
+                            <constraint firstItem="YYk-HF-V0T" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Jwf-QV-2XY"/>
+                            <constraint firstItem="hsZ-zX-VRH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="NDP-9G-mMF"/>
+                            <constraint firstItem="YYk-HF-V0T" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="QJw-0c-UMd"/>
+                            <constraint firstItem="hsZ-zX-VRH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Teh-oV-kdN"/>
+                            <constraint firstItem="hsZ-zX-VRH" firstAttribute="top" secondItem="YYk-HF-V0T" secondAttribute="bottom" constant="30" id="xYD-r7-x0N"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,6 +53,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="SplashScreen" width="125" height="88"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
