--- a/WordsFactory/WordsFactory/Views/Cells/WordTableViewCell.xib
+++ b/WordsFactory/WordsFactory/Views/Cells/WordTableViewCell.xib
@@ -10,37 +10,48 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="KGk-i7-Jjw" customClass="SearchTableViewCell" customModule="WordsFactory" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="172" id="KGk-i7-Jjw" customClass="WordTableViewCell" customModule="WordsFactory" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="172"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="172"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LxJ-aq-akj">
-                        <rect key="frame" x="10" y="10" width="300" height="120"/>
+                        <rect key="frame" x="10" y="10" width="300" height="152"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Слово" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msf-bm-hHv">
-                                <rect key="frame" x="15" y="30" width="66" height="60"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Слово Слово Слово Слово Слово Слово Слово Слово " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msf-bm-hHv">
+                                <rect key="frame" x="15" y="30" width="219" height="92"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ZH-XD-iTm">
-                                <rect key="frame" x="244" y="45.666666666666664" width="41" height="28.999999999999993"/>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ZH-XD-iTm">
+                                <rect key="frame" x="244" y="61.666666666666671" width="41" height="29"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="speak" imagePadding="0.0">
                                     <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage"/>
                                 </buttonConfiguration>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DTs-FO-Qw4">
+                                <rect key="frame" x="15" y="122" width="229" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" name="BackgroundColor"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="DTs-FO-Qw4" secondAttribute="bottom" constant="10" id="3hK-C8-81A"/>
+                            <constraint firstItem="DTs-FO-Qw4" firstAttribute="trailing" secondItem="5ZH-XD-iTm" secondAttribute="leading" id="DZV-Uw-CcH"/>
                             <constraint firstItem="5ZH-XD-iTm" firstAttribute="centerY" secondItem="LxJ-aq-akj" secondAttribute="centerY" id="NEe-Ut-RYF"/>
                             <constraint firstItem="msf-bm-hHv" firstAttribute="top" secondItem="LxJ-aq-akj" secondAttribute="top" constant="30" id="Onz-bw-f6P"/>
                             <constraint firstAttribute="trailing" secondItem="5ZH-XD-iTm" secondAttribute="trailing" constant="15" id="QCd-Us-6lZ"/>
+                            <constraint firstItem="DTs-FO-Qw4" firstAttribute="top" secondItem="msf-bm-hHv" secondAttribute="bottom" id="RHv-CE-RyW"/>
                             <constraint firstItem="msf-bm-hHv" firstAttribute="leading" secondItem="LxJ-aq-akj" secondAttribute="leading" constant="15" id="TCm-Uq-IKE"/>
+                            <constraint firstItem="5ZH-XD-iTm" firstAttribute="leading" secondItem="msf-bm-hHv" secondAttribute="trailing" constant="10" id="hoO-Ex-e6M"/>
                             <constraint firstAttribute="bottom" secondItem="msf-bm-hHv" secondAttribute="bottom" constant="30" id="mNv-fa-lve"/>
+                            <constraint firstItem="DTs-FO-Qw4" firstAttribute="leading" secondItem="LxJ-aq-akj" secondAttribute="leading" constant="15" id="vFC-6N-vEl"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -53,11 +64,12 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="detailsLabel" destination="DTs-FO-Qw4" id="Lui-KU-5TM"/>
                 <outlet property="speakButton" destination="5ZH-XD-iTm" id="k0W-WF-ZR4"/>
                 <outlet property="viewContainer" destination="LxJ-aq-akj" id="yoN-hL-lC8"/>
                 <outlet property="wordLabel" destination="msf-bm-hHv" id="qhT-ee-TAl"/>
             </connections>
-            <point key="canvasLocation" x="-27.480916030534349" y="52.816901408450704"/>
+            <point key="canvasLocation" x="-27.480916030534349" y="64.08450704225352"/>
         </tableViewCell>
     </objects>
     <resources>
